[package]
name = "bip39_hunter"
version = "0.1.0"
edition = "2021"

[dependencies]
bip39 = "1.2"
bitcoin = { version = "0.30.2", features = ["std", "rand-std"] }
secp256k1 = { version = "0.27", features = ["rand-std"] }
rand = "0.8"
rayon = "1.10"
csv = "1.3"
num_cpus = "1.16"
colored = "2.1"